# llmfetcher

./: .gitignore  CODEMAP.md  FIXES_SUMMARY.md  PROJECT_STATUS.md  PUBLIC_API.md  README.md  SEMANTICS.md  TESTING_STATUS.md  USAGE_GUIDE.md  __init__.py  agent.py  demo.py  demo_agent_and_swarm.py  llm_context.py  llm_fetcher.py  llm_types.py  main.py  package-lock.json  package.json  prompt.py  pyproject.toml  requirements.txt  test_imports.py  test_write_file.py  tool.py  tool_call_adapter.py
.codetalk/: index.json
.github/workflows/: ci.yml
handlers/: __init__.py  anthropic.py  base.py  litellm.py  openai.py  openai_compat.py  openvino.py
pack/: __init__.py  agent.py  agent_io.py  llm_context.py  llm_fetcher.py  thinking_graph.py  tool.py  tool_call_adapter.py  types.py
pack/swarm/: execution_graph.py  swarm.py
pack/tests/: conftest.py  test_agent_concurrency.py (new)  test_agent_io.py  test_ctf_swarm.py  test_ctf_tools.py  test_llmdemo.py
pack/tools/: builtin_tools.py  execution_graph_tools.py  obscura_tools.py  shell_tools.py  thinking_graph_tools.py
streamers/: __init__.py  streamer_base.py  think_color_streamer.py
swarm/: execution_graph.py  runtime_slot.py
tests/: conftest.py  test_agent_io.py  test_ctf_swarm.py  test_ctf_tools.py  test_debug_messages.py  test_deepseek_api.py  test_deepseek_no_tools.py  test_deepseek_tool.py  test_deepseek_with_agent.py  test_llmdemo.py  test_tool_call_parsing.py  test_write_file.py
tools/: __init__.py  ctf_tools.py  runtime_slot_tools.py
