[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llmfetcher"
version = "0.3.0"
description = "A powerful Python framework for building, orchestrating, and executing LLM-powered multi-agent systems"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "LunaticLegacy", email = "lunaticlegacy@163.com"}
]
keywords = ["llm", "agent", "multi-agent", "orchestration", "ai", "openai", "anthropic"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "openai>=1.0.0",
    "anthropic>=0.100.0",
    "pydantic>=2.0.0",
    "aiohttp>=3.8.0",
    "beautifulsoup4>=4.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]
openvino = [
    "openvino-genai>=2025.0",
]

[project.urls]
Homepage = "https://github.com/LunaticLegacy/llmfetcher"
Repository = "https://github.com/LunaticLegacy/llmfetcher"
"Bug Tracker" = "https://github.com/LunaticLegacy/llmfetcher/issues"

[tool.setuptools]
packages = ["llmfetcher", "llmfetcher.swarm", "llmfetcher.tools"]

[tool.setuptools.package-dir]
llmfetcher = "."
"llmfetcher.swarm" = "swarm"
"llmfetcher.tools" = "tools"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = [".."]
addopts = "-v --tb=short"

[tool.black]
line-length = 100
target-version = ['py310']

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.ruff]
line-length = 100
target-version = "py310"
